# skai-lang

./: .gitignore  CMakeLists.txt  README.md  expectations.sk  main.cpp
examples/: flow.sk  functions.sk  variables.sk
include/skai/: .sk  ast.hpp  error.hpp  interpreter.hpp  lexer.hpp  object.hpp  parser.hpp  scope.hpp  sloc.hpp  test.cpp  utils.hpp
include/skai/libs/: builtins.hpp  maths.hpp
libs/: utils.sk
modules/: math.sk
tests/: test.cpp  test.sk
